--- a/src/app/weather/weather.tmpl.html
+++ b/src/app/weather/weather.tmpl.html
@@ -1,24 +1,30 @@
 <span> Here is the weather! </span>
 
 <br/>
-{{weather.zipcode}}
 <form class="form-inline">
-	Latitude:
-<input type="text" ng-model="weather.latitude">
-Longitude
-<input type="text" ng-model="weather.longitude">
-<button type="submit" class="btn btn-primary" ng-click="weather.getCurrentWeatherByLatLon(weather.latitude, weather.longitude)">Get Current Weather
-</button>
-<!-- <button type="submit" class="btn btn-primary" ng-click="weather.getMinuteWeatherByLatLon(weather.latitude, weather.longitude)">Get Minutely Weather
-</button> -->
-<button type="submit" class="btn btn-primary" ng-click="weather.getHourWeatherByLatLon(weather.latitude, weather.longitude)">Get Hourly Weather
-</button>
-<button type="submit" class="btn btn-primary" ng-click="weather.getDayWeatherByLatLon(weather.latitude, weather.longitude)">Get Daily Weather
-</button>
+	<div class="row">
+		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2" ></div>
+		<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+		<input id="address" type="text" class="form-control input-lg" ng-model="weather.address" placeholder="Address, City/State, or Zip">
+		</div>
+		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2" ></div>
+	</div>
+	<br />
+	<div class="row">
+		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2" ></div>
+
+		<button type="submit" class="btn btn-primary col-xs-2 col-sm-2 col-md-2 col-lg-2" ng-click="weather.getCurrentWeatherByAddress(weather.address)">Current</button>
+		<div class="col-xs-1 col-sm-1 col-md-1 col-lg-1" ></div>
+
+		<button type="submit" class="btn btn-primary col-xs-2 col-sm-2 col-md-2 col-lg-2" ng-click="weather.getHourWeatherByAddress(weather.address)">Hourly</button>
+		<div class="col-xs-1 col-sm-1 col-md-1 col-lg-1" ></div>
+
+		<button type="submit" class="btn btn-primary col-xs-2 col-sm-2 col-md-2 col-lg-2" styleng-click="weather.getDayWeatherByAddress(weather.address)">Daily</button>
+		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2" ></div>
+
+	</div>
 </form>
 
-<!-- Data: {{weather.data}} <br/>
- -->Error: {{weather.error}}
 
 <br/>
 <hr/>
@@ -30,5 +36,5 @@ Longitude
 </div>
 
 <div clas="daily_container row" ng-repeat="day in weather.data" ng-if="weather.selection=='daily'">
-<daily ng-if="weather.selection=='daily'"></daily>
+	<daily ng-if="weather.selection=='daily'"></daily>
 </div>
