--- a/app/public/stylesheets/styles.css
+++ b/app/public/stylesheets/styles.css
@@ -72,8 +72,9 @@ html {
 }
 
 .weather_block {
-    background-color: rgba(255,255,255,0.5);
+    background-color: rgba(255,255,255,0.6);
     padding: 20px;
+    margin: 20px;
 }
 
 .currently, .currently > *, .hourly, .hourly > *, .daily, .daily > *,  {
