--- a/app/public/stylesheets/styles.css
+++ b/app/public/stylesheets/styles.css
@@ -75,8 +75,12 @@ html {
     background-color: rgba(255,255,255,0.6);
     padding: 20px;
     margin: 20px;
+        border-radius: 10px;
+
+
 }
 
 .currently, .currently > *, .hourly, .hourly > *, .daily, .daily > *,  {
     relative;
 }
+
